--- a/PovikajMajstor/Info.plist
+++ b/PovikajMajstor/Info.plist
@@ -74,5 +74,7 @@
 	<string>To show your location</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>/</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To access photos</string>
 </dict>
 </plist>
